added guardian notes to new juvenile users, verifying dob is a valid date not in the future

--- a/Open-ILS/xul/staff_client/server/patron/ue.xhtml
+++ b/Open-ILS/xul/staff_client/server/patron/ue.xhtml
@@ -955,9 +955,15 @@
 		<span class='hide_me' id='ue_cancel_confirm'>
 			Are you sure you wish to cancel this editing session?
 			Canceling will destroy any unsaved changes you have made thus far to the user.
-			</span>
+		</span>
+		<span class='hide_me' id='ue_juv_guardian'>
+			This patron is under 18 years of age.  Please enter the name 
+			of the parent or guardian for this patron.
+		</span>
+		<span class='hide_me' id='ue_bad_date'>
+			The date provided is either in the future or invalid.  We're expecting YYYY-MM-DD
+		</span>
 	</div>
-
 
 	</body>
 </html>
