displaying guardian setting in editor when set

--- a/Open-ILS/xul/staff_client/server/patron/ue.xhtml
+++ b/Open-ILS/xul/staff_client/server/patron/ue.xhtml
@@ -213,7 +213,7 @@
 												<input type='password' id='ue_password1'/>
 												<button class='hide_me' onclick='uEditResetPw();' id='ue_reset_pw'>Reset</button>
 												<span style='padding-left: 10px;' class='hide_me' id='ue_password_gen'>
-													Generated password: 
+													Password: 
 													<span style='text-decoration:underline;' id='ue_password_plain'/>
 												</span>
 											</div>
@@ -353,6 +353,14 @@
 										<td>
 											<div class='wide left'>
 												<input type='text' id='ue_secondary_ident'/>
+											</div>
+										</td>
+									</tr>
+									<tr class='hide_me' id='ue_guardian_row'>
+										<td><div class='wide right'><b>Parent / Guardian</b></div></td>
+										<td>
+											<div class='wide left'>
+												<span id='ue_guardian_field'/>
 											</div>
 										</td>
 									</tr>
