removing auto scroll to test

--- a/Open-ILS/xul/staff_client/server/patron/ue.xhtml
+++ b/Open-ILS/xul/staff_client/server/patron/ue.xhtml
@@ -48,8 +48,12 @@
 			#uedit_nav_bar { border: 2px solid #E0F0E0; padding: 6px;}
 			.nav_link { padding-left: 90px; padding-right: 90px; }
 			.main_nav_link { -moz-border-radius: 7px; height: 13%;}
+			/*
 			.main_div { height: 480px; padding-left: 15px; 
 				text-align: center; vertical-align: middle; overflow: auto;}
+				*/
+			.main_div { height: 480px; padding-left: 15px; 
+				text-align: center; vertical-align: middle; }
 			.nav_link_table { height: 480px;}
 			.label_active { background: #E0F0E0; }
 			.right { text-align: right; padding-right: 3px;}
