--- a/Open-ILS/xul/staff_client/server/admin/org_settings.xhtml
+++ b/Open-ILS/xul/staff_client/server/admin/org_settings.xhtml
@@ -43,25 +43,38 @@
 				</thead>
 				<tbody id='os_tbody'>
 					<tr>
+						<td>OPAC Inactivity Timeout (in seconds)</td>
+						<td><input type='text' id='auth.opac_timeout' size='5'/></td>
+						<td><button id='auth.opac_timeout.apply'>Apply</button></td>
+						<td><button id='auth.opac_timeout.apply_all'>Apply to all Locations</button></td>
+					</tr>
+					<tr>
 						<td>Lost Materials Processing Fee</td>
-						<td>&#036;<input ismoney='1' type='text' id='circ.lost_materials_processing_fee' value='0.00'/></td>
+						<td>&#036;<input ismoney='1' type='text' id='circ.lost_materials_processing_fee' size='5'/></td>
 						<td><button id='circ.lost_materials_processing_fee.apply'>Apply</button></td>
 						<td><button id='circ.lost_materials_processing_fee.apply_all'>Apply to all Locations</button></td>
 					</tr>
 					<tr>
 						<td>Default Item Price</td>
-						<td>&#036;<input ismoney='1' type='text' id='cat.default_item_price' value='0.00'/></td>
+						<td>&#036;<input ismoney='1' type='text' id='cat.default_item_price' size='5'/></td>
 						<td><button id='cat.default_item_price.apply'>Apply</button></td>
 						<td><button id='cat.default_item_price.apply_all'>Apply to all Locations</button></td>
 					</tr>
 					<tr>
 						<td>Collections Fee</td>
-						<td>&#036;<input ismoney='1' type='text' id='circ.collections_fee' value='0.00'/></td>
+						<td>&#036;<input ismoney='1' type='text' id='circ.collections_fee' size='5'/></td>
 						<td><button id='circ.collections_fee.apply'>Apply</button></td>
 						<td><button id='circ.collections_fee.apply_all'>Apply to all Locations</button></td>
 					</tr>
 				</tbody>
 			</table>
+			<br/>
+			<div style='font-size: 9pt;'>
+				<div>
+					I. "Apply to all Locations" will force the new setting 
+					to be applied to all locations in the location dropdown.
+				</div>
+			</div>
 		</center>
 	</body>
 </html>
