makding lib select size auto

--- a/Open-ILS/xul/staff_client/server/admin/copy_locations.xhtml
+++ b/Open-ILS/xul/staff_client/server/admin/copy_locations.xhtml
@@ -74,7 +74,7 @@
 					<tr>
 						<td>Owning Library:</td>
 						<td colspan='2' >
-							<select id='cl_new_owner' disabled='disabled'> </select>
+							<select id='cl_new_owner' disabled='disabled' style='width:auto;'> </select>
 						</td>
 						<td><input id='sc_new_submit' type='submit' value='Create' disabled='disabled'/></td>
 					</tr>
