--- a/Open-ILS/xul/staff_client/server/admin/stat_cat_editor.xhtml
+++ b/Open-ILS/xul/staff_client/server/admin/stat_cat_editor.xhtml
@@ -54,7 +54,7 @@
 						</td>
 						<td>Owning Library: </td>
 						<td>
-							<select class='select_big' id='sc_owning_lib_selector'>
+							<select id='sc_owning_lib_selector' style='width:auto;'>
 							</select>
 						</td>
 					</tr>
