got the lib settings editor working and added to the admin menu fixed some server code param formatting

--- a/Open-ILS/xul/staff_client/server/admin/index.xhtml
+++ b/Open-ILS/xul/staff_client/server/admin/index.xhtml
@@ -15,17 +15,20 @@
 				Local System Administration
 			</div>
 			<img src='../skin/media/images/tools.png'/>
-			<div style='padding: 5px;'>
+			<div style='padding: 8px;'>
 				<a href='javascript:_l("copy_locations.xhtml");'>Copy Locations Editor</a>
 			</div>
-			<div style='padding: 5px;'>
+			<div style='padding: 8px;'>
 				<a href='javascript:_l("non_cat_types.xhtml");'>Non Cataloged Types Editor</a>
 			</div>
-			<div style='padding: 5px;'>
+			<div style='padding: 8px;'>
 				<a href='javascript:_l("stat_cat_editor.xhtml");'>Statistical Categories Editor</a>
 			</div>
-			<div style='padding: 5px;'>
+			<div style='padding: 8px;'>
 				<a href='javascript:_l("closed_dates.xhtml");'>Closed Dates Editor</a>
+			</div>
+			<div style='padding: 8px;'>
+				<a href='javascript:_l("org_settings.xhtml");'>Library Settings Editor</a>
 			</div>
 		</center>
 	</body>
