--- a/Open-ILS/xul/staff_client/server/admin/org_settings.xhtml
+++ b/Open-ILS/xul/staff_client/server/admin/org_settings.xhtml
@@ -76,6 +76,13 @@
 				</div>
 			</div>
 		</center>
+		<span id='os_success' class='hide_me'>
+			Update succeeded.
+		</span>
+		<span id='os_confirm_all' class='hide_me'>
+			This will update the setting for all of the locations listed in the dropdown menu.
+			Are you sure you wish to continue?
+		</span>
 	</body>
 </html>
 
