added staff-timeout setting

--- a/Open-ILS/xul/staff_client/server/admin/org_settings.xhtml
+++ b/Open-ILS/xul/staff_client/server/admin/org_settings.xhtml
@@ -49,6 +49,12 @@
 						<td><button id='auth.opac_timeout.apply_all'>Apply to all Locations</button></td>
 					</tr>
 					<tr>
+						<td>Staff Login Inactivity Timeout (in seconds)</td>
+						<td><input type='text' id='auth.staff_timeout' size='5'/></td>
+						<td><button id='auth.staff_timeout.apply'>Apply</button></td>
+						<td><button id='auth.staff_timeout.apply_all'>Apply to all Locations</button></td>
+					</tr>
+					<tr>
 						<td>Lost Materials Processing Fee</td>
 						<td>&#036;<input ismoney='1' type='text' id='circ.lost_materials_processing_fee' size='5'/></td>
 						<td><button id='circ.lost_materials_processing_fee.apply'>Apply</button></td>
