--- a/Open-ILS/xul/staff_client/server/patron/ue.xhtml
+++ b/Open-ILS/xul/staff_client/server/patron/ue.xhtml
@@ -766,11 +766,11 @@
 									<td width='10%'/>
 									<td width='40%'>
 										<a id='ue_back' class='nav_link hide_me' 
-											href='javascript:uEditPrev()'>&lt;&lt; Back</a>
+											href='javascript:uEditPrev()'>&lt;&lt;&nbsp;&nbsp;&nbsp;Back</a>
 									</td>
 									<td width='40%'>
 										<a id='ue_fwd' class='nav_link' 
-											href='javascript:uEditNext()'>Forward &gt;&gt;</a>
+											href='javascript:uEditNext()'>Forward&nbsp;&nbsp;&nbsp;&gt;&gt;</a>
 									</td>
 									<td width='10%'/>
 								</tr>
