made height, min-height

--- a/Open-ILS/xul/staff_client/server/patron/ue.xhtml
+++ b/Open-ILS/xul/staff_client/server/patron/ue.xhtml
@@ -52,8 +52,10 @@
 			.main_div { height: 480px; padding-left: 15px; 
 				text-align: center; vertical-align: middle; overflow: auto;}
 				*/
-			.main_div { height: 480px; padding-left: 15px; 
+
+			.main_div { min-height: 450px; padding-left: 15px; 
 				text-align: center; vertical-align: middle; }
+
 			.nav_link_table { height: 480px;}
 			.label_active { background: #E0F0E0; }
 			.right { text-align: right; padding-right: 3px;}
