implemented the fabled group-groups

--- a/Open-ILS/xul/staff_client/server/patron/ue.xhtml
+++ b/Open-ILS/xul/staff_client/server/patron/ue.xhtml
@@ -84,7 +84,7 @@
 		</style>
 	</head>
 
-	<body onload='try{uEditInit();}catch(e){alert(js2JSON(e));}'>
+	<body onload='uEditInit();'>
 
 	<center>
 
