added phone extension support

--- a/Open-ILS/xul/staff_client/server/patron/ue.xhtml
+++ b/Open-ILS/xul/staff_client/server/patron/ue.xhtml
@@ -389,8 +389,8 @@
 										<td><div class='wide right'>Daytime Phone</div></td>
 										<td>
 											<div class='wide left'>
-												<input class='pad' type='text' id='ue_day_phone' maxlength='12' size='12'/>
-												<span style='font-size: 8pt;'>(123-456-7890)</span>
+												<input class='pad' type='text' id='ue_day_phone' size='18'/>
+												<span style='font-size: 9pt;'> Example: 123-456-7890 or 123-456-7890 ex123</span>
 											</div>
 										</td>
 									</tr>
@@ -398,7 +398,7 @@
 										<td><div class='wide right'>Evening Phone</div></td>
 										<td>
 											<div class='wide left'>
-												<input class='pad' type='text' id='ue_night_phone' maxlength='12' size='12'/>
+												<input class='pad' type='text' id='ue_night_phone' size='18'/>
 											</div>
 										</td>
 									</tr>
@@ -406,7 +406,7 @@
 										<td><div class='wide right'>Other/Cell Phone</div></td>
 										<td>
 											<div class='wide left'>
-												<input class='pad' type='text' id='ue_other_phone' maxlength='12' size='12'/>
+												<input class='pad' type='text' id='ue_other_phone' size='18'/>
 											</div>
 										</td>
 									</tr>
