--- a/Open-ILS/xul/staff_client/server/admin/index.xhtml
+++ b/Open-ILS/xul/staff_client/server/admin/index.xhtml
@@ -30,6 +30,9 @@
 			<div style='padding: 8px;'>
 				<a href='javascript:_l("org_settings.xhtml");'>Library Settings Editor</a>
 			</div>
+			<div style='padding: 8px;'>
+				<a href='javascript:_l("printer_settings.html");'>Printer Settings Editor</a>
+			</div>
 		</center>
 	</body>
 </html>
