dob no longer required, added dup barcode checking

--- a/Open-ILS/xul/staff_client/server/patron/ue.xhtml
+++ b/Open-ILS/xul/staff_client/server/patron/ue.xhtml
@@ -966,6 +966,10 @@
 			The selected username is in use by another user.  
 			Please choose a different username.
 		</span>
+		<span id='ue_dup_barcode'>
+			The selected barcode is in use by another user.  
+			Please choose a different barcode.
+		</span>
 		<span class='hide_me' id='ue_cancel_confirm'>
 			Are you sure you wish to cancel this editing session?
 			Canceling will destroy any unsaved changes you have made thus far to the user.
