--- a/Open-ILS/xul/staff_client/server/patron/ue.xhtml
+++ b/Open-ILS/xul/staff_client/server/patron/ue.xhtml
@@ -196,14 +196,16 @@
 										<td><div class='wide right'>Barcode</div></td>
 										<td>
 											<div class='wide left'>
-												<input type='text' id='ue_barcode' 
+												<input type='text' id='ue_barcode' />
+													<!--
 													onblur=' 
 														var node = uEditFindFieldByWId("ue_username");
 														if(!node.widget.node.value) {
 															node.widget.node.value = this.value;
 															node.widget.node.onchange();
 														}'
-														/><button style='padding-left: 5px;' class='hide_me' id='ue_mark_card_lost'
+														/> -->
+														<button style='padding-left: 5px;' class='hide_me' id='ue_mark_card_lost'
 													onclick='uEditMarkCardLost();'>Mark Lost</button>
 											</div>
 										</td>
