alet_message is now required when barred is set to true

--- a/Open-ILS/xul/staff_client/server/patron/ue.xhtml
+++ b/Open-ILS/xul/staff_client/server/patron/ue.xhtml
@@ -983,6 +983,10 @@
 		<span class='hide_me' id='ue_bad_date'>
 			The date provided is either in the future or invalid.  We're expecting YYYY-MM-DD
 		</span>
+		<span class='hide_me' id='ue_made_barred'>
+			Please add a note to the patron's alert message explaining why the patron is barred.
+		</span>
+
 	</div>
 
 	</body>
