fixed bug in profile editing when user does not have perm to edit that profile

--- a/Open-ILS/xul/staff_client/server/patron/ue.xhtml
+++ b/Open-ILS/xul/staff_client/server/patron/ue.xhtml
@@ -574,7 +574,7 @@
 										<td>
 											<div class='wide left'>
 												<select id='ue_profile' class='select_big'>
-													<option> -- Required -- </option>
+													<option value=''> -- Required -- </option>
 												</select>
 											</div>
 										</td>
