added "Cash Reports" entry

--- a/Open-ILS/xul/staff_client/server/admin/index.xhtml
+++ b/Open-ILS/xul/staff_client/server/admin/index.xhtml
@@ -33,6 +33,9 @@
 			<div style='padding: 8px;'>
 				<a href='javascript:_l("printer_settings.html");'>Printer Settings Editor</a>
 			</div>
+			<div style='padding: 8px;'>
+				<a href='javascript:_l("cash_reports.xhtml");'>Cash Reports</a>
+			</div>
 		</center>
 	</body>
 </html>
