global font settings

--- a/Open-ILS/xul/staff_client/server/admin/index.xhtml
+++ b/Open-ILS/xul/staff_client/server/admin/index.xhtml
@@ -34,6 +34,9 @@
 				<a href='javascript:_l("printer_settings.html");'>Printer Settings Editor</a>
 			</div>
 			<div style='padding: 8px;'>
+				<a href='javascript:_l("font_settings.xul");'>Global Font Settings</a>
+			</div>
+			<div style='padding: 8px;'>
 				<a href='javascript:_l("../patron/holds.xul");'>Alternate Pull List for Hold Requests</a>
 			</div>
 			<div style='padding: 8px;'>
