--- a/Open-ILS/xul/staff_client/server/admin/index.xhtml
+++ b/Open-ILS/xul/staff_client/server/admin/index.xhtml
@@ -15,33 +15,42 @@
 				Local System Administration
 			</div>
 			<img src='../skin/media/images/tools.png'/>
-			<div style='padding: 8px;'>
-				<a href='javascript:_l("copy_locations.xhtml");'>Copy Locations Editor</a>
-			</div>
-			<div style='padding: 8px;'>
-				<a href='javascript:_l("non_cat_types.xhtml");'>Non Cataloged Types Editor</a>
-			</div>
-			<div style='padding: 8px;'>
-				<a href='javascript:_l("stat_cat_editor.xhtml");'>Statistical Categories Editor</a>
-			</div>
-			<div style='padding: 8px;'>
-				<a href='javascript:_l("closed_dates.xhtml");'>Closed Dates Editor</a>
-			</div>
-			<div style='padding: 8px;'>
-				<a href='javascript:_l("org_settings.xhtml");'>Library Settings Editor</a>
-			</div>
-			<div style='padding: 8px;'>
-				<a href='javascript:_l("printer_settings.html");'>Printer Settings Editor</a>
-			</div>
-			<div style='padding: 8px;'>
-				<a href='javascript:_l("font_settings.xul");'>Global Font Settings</a>
-			</div>
-			<div style='padding: 8px;'>
-				<a href='javascript:_l("../patron/holds.xul");'>Alternate Pull List for Hold Requests</a>
-			</div>
-			<div style='padding: 8px;'>
-				<a href='javascript:_l("cash_reports.xhtml");'>Cash Reports</a>
-			</div>
+			<table>
+				<tr><th>Workstation Configuration</th><th>Library Configuration</th><th>Maintenance Reports</th></tr>
+				<tr valign="top">
+					<td>
+						<div style='padding: 8px;'>
+							<a href='javascript:_l("font_settings.xul");'>Global Font Settings</a>
+						</div>
+						<div style='padding: 8px;'>
+							<a href='javascript:_l("printer_settings.html");'>Printer Settings Editor</a>
+						</div>
+					</td><td>
+						<div style='padding: 8px;'>
+							<a href='javascript:_l("closed_dates.xhtml");'>Closed Dates Editor</a>
+						</div>
+						<div style='padding: 8px;'>
+							<a href='javascript:_l("copy_locations.xhtml");'>Copy Locations Editor</a>
+						</div>
+						<div style='padding: 8px;'>
+							<a href='javascript:_l("org_settings.xhtml");'>Library Settings Editor</a>
+						</div>
+						<div style='padding: 8px;'>
+							<a href='javascript:_l("non_cat_types.xhtml");'>Non Cataloged Types Editor</a>
+						</div>
+						<div style='padding: 8px;'>
+							<a href='javascript:_l("stat_cat_editor.xhtml");'>Statistical Categories Editor</a>
+						</div>
+					</td><td>
+						<div style='padding: 8px;'>
+							<a href='javascript:_l("../patron/holds.xul");'>Pull List for Hold Requests</a> <span style="color: red">(Testing)</span>
+						</div>
+						<div style='padding: 8px;'>
+							<a href='javascript:_l("cash_reports.xhtml");'>Cash Reports</a>
+						</div>
+					</td>
+				</tr>
+			</table>
 		</center>
 	</body>
 </html>
