--- a/Open-ILS/xul/staff_client/server/admin/printer_settings.html
+++ b/Open-ILS/xul/staff_client/server/admin/printer_settings.html
@@ -4,7 +4,7 @@
 	<script type="text/javascript" src="/xul/server/main/constants.js"></script>
 	<script type="text/javascript" src="/xul/server/main/JSAN.js"></script>
 	<script type="text/javascript" src="printer_settings.js"></script>
-</head><body onload="try { my_init(); } catch(E) { alert(E); }">
+</head><body onload="try { my_init(); } catch(E) { alert(E); }" style="background: white;">
 	<iframe id="sample" src="printer_settings.txt"></iframe><br />
 	<button onclick="try { g.printer_settings(); } catch(E) { alert(E); }">Set Default Printer and Print Test Page</button>
 	<button onclick="try { g.page_settings(); } catch(E) { alert(E); }">Page Settings</button><br />
