bare bones transit list. need to add actions, a print template, and trim the columns

--- a/Open-ILS/xul/staff_client/server/admin/index.xhtml
+++ b/Open-ILS/xul/staff_client/server/admin/index.xhtml
@@ -59,6 +59,9 @@
 							<div style='padding: 8px;'>
 								<a href='javascript:_l("cash_reports.xhtml");'>Cash Reports</a>
 							</div>
+							<div style='padding: 8px;'>
+								<a href='javascript:_l("transit_list.xul");'>Transit List</a>
+							</div>
 						</td>
 					</tr>
 				</tbody>
