new tab for transit list

--- a/Open-ILS/xul/staff_client/server/admin/index.xhtml
+++ b/Open-ILS/xul/staff_client/server/admin/index.xhtml
@@ -60,7 +60,7 @@
 								<a href='javascript:_l("cash_reports.xhtml");'>Cash Reports</a>
 							</div>
 							<div style='padding: 8px;'>
-								<a href='javascript:_l("transit_list.xul");'>Transit List</a>
+								<a href='javascript:window.xulG.new_tab("/xul/server/admin/transit_list.xul",{"tab_name":"Transits"},{});'>Transit List</a>
 							</div>
 						</td>
 					</tr>
