added some status popups

--- a/Open-ILS/xul/staff_client/server/admin/non_cat_types.xhtml
+++ b/Open-ILS/xul/staff_client/server/admin/non_cat_types.xhtml
@@ -147,6 +147,10 @@
 		room "rentals", etc.
 	</span>
 
+	<span class='hide_me' id='nc_update_success'>
+		Non cataloged type successfully updated
+	</span>
+
 </html>
 
 
