quick way to give hold pull list its own savable columns.  really need a default multi-level sort for a pull list... shelving location, call number, author, title, I think

--- a/Open-ILS/xul/staff_client/server/admin/index.xhtml
+++ b/Open-ILS/xul/staff_client/server/admin/index.xhtml
@@ -54,7 +54,7 @@
 							</div>
 						</td><td>
 							<div style='padding: 8px;'>
-								<a href='javascript:_l("../patron/holds.xul");'>Pull List for Hold Requests</a> <span style="color: red">(Testing)</span>
+								<a href='javascript:_l("hold_pull_list.xul");'>Pull List for Hold Requests</a> <span style="color: red">(Testing)</span>
 							</div>
 							<div style='padding: 8px;'>
 								<a href='javascript:_l("cash_reports.xhtml");'>Cash Reports</a>
