classic style pull list for those who miss the old way

--- a/Open-ILS/xul/staff_client/server/admin/index.xhtml
+++ b/Open-ILS/xul/staff_client/server/admin/index.xhtml
@@ -57,6 +57,9 @@
 								<a href='javascript:_l("hold_pull_list.xul");'>Pull List for Hold Requests</a> <span style="color: red">(Testing)</span>
 							</div>
 							<div style='padding: 8px;'>
+								<a href='javascript:_l("hold_pull_list_classic.xhtml");'>Pull List for Hold Requests (Classic)</a> <span style="color: red">(Testing)</span>
+							</div>
+							<div style='padding: 8px;'>
 								<a href='javascript:_l("cash_reports.xhtml");'>Cash Reports</a>
 							</div>
 							<div style='padding: 8px;'>
