--- a/Open-ILS/xul/staff_client/server/admin/hold_pull_list_classic.xhtml
+++ b/Open-ILS/xul/staff_client/server/admin/hold_pull_list_classic.xhtml
@@ -25,9 +25,11 @@
 		<script language='javascript' src='/opac/common/js/org_utils.js'> </script>
 		<script language='javascript' src='/opac/common/js/init.js'> </script>
 		<script language='javascript' src='/opac/common/js/RemoteRequest.js'> </script>
+		<!--
 		<script language='javascript' src='/opac/common/js/sorttable.js'> </script>
+		-->
 		<script language='javascript' src='adminlib.js'> </script>
-		<script language='javascript' src='hold_pull_list.js'> </script>
+		<script language='javascript' src='hold_pull_list_classic.js'> </script>
 		<link type='text/css' rel='stylesheet' href='admin.css'/>
   
 		<style type='text/css'>
@@ -44,15 +46,16 @@
 				<span>Welcome </span><b><span id='pl_user'/></b>
 			</div>
 			<hr/><br/>
+			<div id='inprogress'><blink><span>Retrieving and sorting pull list...</span></blink></div>
 		</center>
-<div id='pull_list_tbody' align="left">
+<div id='pull_list_tbody' align="left" class='hide_me'>
 <pre id='pull_list_row'>
 <span name='call_number'/>
 <span name='title'/>
 <span name='author'/>
-Copy: <span name='copy_number'/>  Location: <span name='copy_location'/> Item ID: <span name='barcode'/>
-Item Type: <span name='format_at'		class='hide_me'>Book</span> <span name='format_at-d'	class='hide_me'>Large Print Book</span> <span name='format_i'		class='hide_me'>Audiobook</span> <span name='format_g'		class='hide_me'>Video Recording</span> <span name='format_j'		class='hide_me'>Music</span> <span name='format_m'		class='hide_me'>Electronic Resource</span>  Patron ID: <span name='patron'/>
-Requested: <span name='date'/>  Hold Type: <span name='copy_hold' class='hide_me'>Copy Hold</span> <span name='volume_hold' class='hide_me'>Volume Hold</span> <span name='title_hold' class='hide_me'>Title Hold</span> <span name='mr_hold' class='hide_me'>Metarecord Hold</span>
+<b>Copy:</b> <span name='copy_number'/>   <b>Location:</b> <span name='copy_location'/>   <b>Item ID:</b> <span name='barcode'/>
+<b>Item Type:</b> <span name='item_type'><span name='format_at' class='hide_me'>Book               </span><span name='format_at-d' class='hide_me'>Large Print Book   </span><span name='format_i' class='hide_me'>Audiobook          </span><span name='format_g' class='hide_me'>Video Recording    </span><span name='format_j' class='hide_me'>Music              </span><span name='format_m' class='hide_me'>Electronic Resource</span></span>   <b>Patron ID:</b> <span name='patron'/>
+<b>Requested:</b> <span name='date'/>            <b>Hold Type:</b> <span name='copy_hold' class='hide_me'>Copy Hold</span><span name='volume_hold' class='hide_me'>Volume Hold</span><span name='title_hold' class='hide_me'>Title Hold</span><span name='mr_hold' class='hide_me'>Metarecord Hold</span>
 </pre>
 </div>
 	</body>
