pref for disabling sound

--- a/Open-ILS/xul/staff_client/server/admin/index.xhtml
+++ b/Open-ILS/xul/staff_client/server/admin/index.xhtml
@@ -31,7 +31,7 @@
 					<tr valign="top">
 						<td>
 							<div style='padding: 8px;'>
-								<a href='javascript:_l("font_settings.xul");'>Global Font Settings</a>
+								<a href='javascript:_l("font_settings.xul");'>Global Font and Sound Settings</a>
 							</div>
 							<div style='padding: 8px;'>
 								<a href='javascript:_l("printer_settings.html");'>Printer Settings Editor</a>
