--- a/Open-ILS/web/reports/oils_rpt_builder.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_builder.xhtml
@@ -80,9 +80,9 @@
 		<div id='oils_rpt_column_editor' class='floaty hide_me'>
 
 			<table id='oils_rpt_editor_tab_table'><tbody><tr>
-				<td width='33%'><a id='oils_rpt_tform_tab'>Display Items and Transforms</a></td>
-				<td width='33%'><a id='oils_rpt_tform_tab'>Filters</a></td>
-				<td width='33%'><a id='oils_rpt_tform_tab'>Aggregate Filters</a></td>
+				<td width='33%'><a id='oils_rpt_tform_tab' href='javascript:void(0);'>Display Items and Transforms</a></td>
+				<td width='33%'><a id='oils_rpt_filter_tab' href='javascript:void(0);'>Filters</a></td>
+				<td width='33%'><a id='oils_rpt_agg_filter_tab' href='javascript:void(0);'>Aggregate Filters</a></td>
 			</tr></tbody></table>
 
 			<div id='oils_rpt_tform_div'>
@@ -90,6 +90,15 @@
 				<br/><br/>
 				<button id='oils_rpt_tform_submit'>Add Item</button>
 			</div>
+
+			<div id='oils_rpt_filter_div' class='hide_me'>
+				<button id='oils_rpt_filter_submit'>Add Item</button>
+			</div>
+
+			<div id='oils_rpt_agg_filter_div' class='hide_me'>
+				<button id='oils_rpt_agg_filter_submit'>Add Item</button>
+			</div>
+
 			<div id='oils_rpt_column_editor_close_div'>
 				<button id='oils_rpt_column_editor_close_button'>Close Window</button>
 			</div>
