adding a top level index-style file adding the base transform template files added some more transform handling logic to base code

--- a/Open-ILS/web/reports/oils_rpt_builder.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_builder.xhtml
@@ -108,6 +108,7 @@
 					<div style='margin-bottom: 10px;'>Select how this field should be displayed:</div>
 					<!--#include virtual="oils_rpt_tform_string.xhtml"-->
 					<!--#include virtual="oils_rpt_tform_date.xhtml"-->
+					<!--#include virtual="oils_rpt_tform_numeric.xhtml"-->
 				</div>
 				<br/><br/>
 				<button id='oils_rpt_tform_submit'>Add Item</button>
