--- a/Open-ILS/web/reports/oils_rpt_tform_numeric.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_tform_numeric.xhtml
@@ -1,9 +1,4 @@
 <div id='oils_rpt_tform_numeric_div'>
-	<input type='radio' name='oils_rpt_tform_numeric' id='oils_rpt_tform_numeric_raw'/> Full Data <br/>
-	<input type='radio' name='oils_rpt_tform_numeric' id='oils_rpt_tform_numeric_sum'/> Full Data <br/>
-	<input type='radio' name='oils_rpt_tform_numeric' id='oils_rpt_tform_numeric_average'/> Full Data <br/>
-	<input type='radio' name='oils_rpt_tform_numeric' id='oils_rpt_tform_numeric_count'/> Count <br/>
-	<input type='radio' name='oils_rpt_tform_numeric' id='oils_rpt_tform_numeric_count_distinct'/> Count Distinct <br/>
-	<input type='radio' name='oils_rpt_tform_numeric' id='oils_rpt_tform_numeric_min'/> Min <br/>
-	<input type='radio' name='oils_rpt_tform_numeric' id='oils_rpt_tform_numeric_max'/> Max <br/>
+	<input type='radio' name='oils_rpt_tform_input' id='oils_rpt_tform_numeric_sum'/> Sum <br/>
+	<input type='radio' name='oils_rpt_tform_input' id='oils_rpt_tform_numeric_average'/> Average <br/>
 </div>
