--- a/Open-ILS/web/reports/oils_rpt_tform_string.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_tform_string.xhtml
@@ -1,8 +1,3 @@
 <div id='oils_rpt_tform_string_div'>
-	<input type='radio' name='oils_rpt_tform_string' id='oils_rpt_tform_string_raw'/> Full Data <br/>
-	<input type='radio' name='oils_rpt_tform_string' id='oils_rpt_tform_string_count'/> Count <br/>
-	<input type='radio' name='oils_rpt_tform_string' id='oils_rpt_tform_string_count_distinct'/> Count Distinct <br/>
-	<input type='radio' name='oils_rpt_tform_string' id='oils_rpt_tform_string_min'/> Min <br/>
-	<input type='radio' name='oils_rpt_tform_string' id='oils_rpt_tform_string_max'/> Max <br/>
-	<input type='radio' name='oils_rpt_tform_string' id='oils_rpt_tform_string_substring'/> Substring <br/>
+	<input type='radio' name='oils_rpt_tform_input' id='oils_rpt_tform_string_substring'/> Substring <br/>
 </div>
