more work on transform display and mangling

--- a/Open-ILS/web/reports/oils_rpt_builder.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_builder.xhtml
@@ -106,14 +106,7 @@
 				<input size='28' id='oils_rpt_tform_label_input'/>
 				<div class='oils_rpt_tform_window'>
 					<div style='margin-bottom: 10px;'>Select how this field should be displayed:</div>
-					<input type='radio' name='oils_rpt_tform_input' id='oils_rpt_tform_all_raw'/> Raw Data <br/>
-					<input type='radio' name='oils_rpt_tform_input' id='oils_rpt_tform_all_count'/> Count <br/>
-					<input type='radio' name='oils_rpt_tform_input' id='oils_rpt_tform_all_count_distinct'/> Count Distinct <br/>
-					<input type='radio' name='oils_rpt_tform_input' id='oils_rpt_tform_all_min'/> Min <br/>
-					<input type='radio' name='oils_rpt_tform_input' id='oils_rpt_tform_all_max'/> Max <br/>
-					<!--#include virtual="oils_rpt_tform_string.xhtml"-->
-					<!--#include virtual="oils_rpt_tform_date.xhtml"-->
-					<!--#include virtual="oils_rpt_tform_numeric.xhtml"-->
+					<!--#include virtual="oils_rpt_tform_table.xhtml"-->
 				</div>
 				<br/><br/>
 				<button id='oils_rpt_tform_submit'>Add Item</button>
