--- a/Open-ILS/web/reports/oils_rpt_tform_numeric.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_tform_numeric.xhtml
@@ -1,4 +1,8 @@
-<div id='oils_rpt_tform_numeric_div'>
-	<input type='radio' name='oils_rpt_tform_input' id='oils_rpt_tform_numeric_sum'/> Sum <br/>
-	<input type='radio' name='oils_rpt_tform_input' id='oils_rpt_tform_numeric_average'/> Average <br/>
-</div>
+<tr datatype='numeric'>
+	<td colspan='2'>
+		<input type='radio' name='oils_rpt_tform_input' id='oils_rpt_tform_numeric_sum'/> Sum <br/>
+	</td>
+	<td colspan='2'>
+		<input type='radio' name='oils_rpt_tform_input' id='oils_rpt_tform_numeric_average'/> Average <br/>
+	</td>
+</tr>
