--- a/Open-ILS/web/reports/oils_rpt_tform_table.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_tform_table.xhtml
@@ -1,5 +1,5 @@
 <table>
-	<tbody id='oils_rpt_tform_tbody'>
+	<tbody id='oils_rpt_tform_tbody' class='oils_rpt_editor_window_tbody'>
 		<tr datatype='all'>
 			<td colspan='2'>
 				<input type='radio' name='oils_rpt_tform_input' id='oils_rpt_tform_all_raw'/> 
